--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ header {
     max-width: 100%;
     margin: 0 auto;
     background: #ECF1FA;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .start-edge {
