--- a/css/main.css
+++ b/css/main.css
@@ -1,370 +1,495 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500&display=swap');
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Kanit', sans-serif;
+  box-sizing: border-box;
 }
-
-header {
-    background: #151C54;
+body {
+  font-size: 14px;
 }
-
-.container {
-    max-width: 80%;
-    max-width: 1535px;
-    margin: 0 auto;
+.v62_1243 {
+  width: 100%;
+  height: 5085px;
+  background: rgba(255,255,255,1);
+  opacity: 1;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  overflow: hidden;
 }
-
-.header-info {
-    margin-left: 4vw;
-    margin-right: 4vw;
-    height: 100%;
+.v62_1286 {
+  width: 100%;
+  height: 680px;
+  background: rgba(236,241,250,1);
+  opacity: 1;
+  position: absolute;
+  top: 992px;
+  left: 1px;
+  overflow: hidden;
 }
-
-.header-info img {
-    max-width: 1216px;
-    width: 100%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+.v62_1288 {
+  width: 100%;
+  height: 992px;
+  background: rgba(21,28,84,1);
+  opacity: 1;
+  position: absolute;
+  top: 0px;
+  left: 1px;
+  overflow: hidden;
 }
-
-.highlight {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    background: #ECF1FA;
+.v62_1289 {
+  width: 597px;
+  height: 725px;
+  background: url("../images/v62_1289.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 164px;
+  left: 738px;
+  overflow: hidden;
 }
-
-.highlight h1 {
-    text-align: left;
-    font-size: min(3.3vmin, 36px);
-    font-weight: normal;
+.v62_1290 {
+  width: 100%;
+  height: 646px;
+  background: rgba(255,255,255,1);
+  opacity: 1;
+  position: absolute;
+  top: 1672px;
+  left: 0px;
+  overflow: hidden;
 }
-
-#block_container {
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    display: flex;
+.v62_1292 {
+  width: 370px;
+  color: rgba(19,38,129,1);
+  position: absolute;
+  top: 3252px;
+  left: 221px;
+  font-family: Kanit;
+  font-weight: Regular;
+  font-size: 36px;
+  opacity: 1;
+  text-align: left;
 }
-
-#block1 {
-    align-self: bottom;
+.v62_1293 {
+  width: 682px;
+  color: url("../images/v62_1293.png");
+  position: absolute;
+  top: 4214px;
+  left: 427px;
+  font-family: Kanit;
+  font-weight: Regular;
+  font-size: 36px;
+  opacity: 1;
+  text-align: left;
 }
-
-#block2 {
-    align-self: center;
+.v62_1312 {
+  width: 423px;
+  color: rgba(129,130,132,1);
+  position: absolute;
+  top: 3390px;
+  left: 221px;
+  font-family: Kanit;
+  font-weight: Light;
+  font-size: 18px;
+  opacity: 1;
+  text-align: left;
 }
-
-.open-account-image img{
-    max-width: 502px;
-    width: 40vw;
-    margin-top: 0px;
-    margin-right: 4vw;
-    display: block;
+.v62_1313 {
+  width: 560px;
+  color: rgba(129,130,132,1);
+  position: absolute;
+  top: 3856px;
+  left: 892px;
+  font-family: Kanit;
+  font-weight: Light;
+  font-size: 18px;
+  opacity: 1;
+  text-align: left;
 }
-
-#edge_tab img {
-    text-align: left;
-    margin-bottom: 2vw;
-    width: 7vw;
-    max-width: 66px;
+.v62_1314 {
+  width: 920px;
+  color: rgba(37,52,112,1);
+  position: absolute;
+  top: 4286px;
+  left: 308px;
+  font-family: Kanit;
+  font-weight: Light;
+  font-size: 18px;
+  opacity: 1;
+  text-align: center;
 }
-
-.start-edge-btn {
-    text-align: center;
-    width: 100%;
-    margin-top: 2vw;
-    margin-bottom: 2vw;
-    margin-left: 0px;
-    display: block;
-    text-align: left;
+.v62_1315 {
+  width: 535px;
+  color: rgba(21,28,84,1);
+  position: absolute;
+  top: 1186px;
+  left: 892px;
+  font-family: Kanit;
+  font-weight: Regular;
+  font-size: 36px;
+  opacity: 1;
+  text-align: left;
 }
-
-.start-edge-btn img {
-    width: 18vw;
-    max-width: 200px;
-    margin-right: 1.2vw;
+.v62_1316 {
+  width: 352px;
+  color: url("../images/v62_1316.png");
+  position: absolute;
+  top: 1448px;
+  left: 892px;
+  font-size: 18px;
+  opacity: 1;
+  text-align: left;
 }
-
-.start-edge-info {
-    text-align: left;
-    font-size: min(1.8vmin, 18px);
-    font-weight: lighter;
-    margin-top: 2vw;
+.v62_1317 {
+  width: 352px;
+  color: url("../images/v62_1317.png");
+  position: absolute;
+  top: 4459px;
+  left: 592px;
+  font-size: 18px;
+  opacity: 1;
+  text-align: left;
 }
-
-.why-edge {
-    margin-left: 2vw;
-    margin-right: 2vw;
-    margin-top: 5vw;
-    margin-bottom: 5vw;
-    height: 100%;
-    /* border: 1px solid red; */
+.v62_1318 {
+  width: 785px;
+  color: url("../images/v62_1318.png");
+  position: absolute;
+  top: 438px;
+  left: 224px;
+  opacity: 1;
+  text-align: left;
 }
-
-.why-edge img {
-    max-width: 1317px;
-    width: 100%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+.v62_1320 {
+  width: 382px;
+  color: url("../images/v62_1320.png");
+  position: absolute;
+  top: 1780px;
+  left: 577px;
+  font-size: 42px;
+  opacity: 1;
+  text-align: center;
 }
-
-.supergraphic {
-    background: #ECF1FA;
-    background-image: url(/img/Supergraphic.png);
-    background-repeat: no-repeat;
-    background-position: right;
-    background-size: contain;
+.v62_1327 {
+  width: 136px;
+  height: 42px;
+  background: url("../images/v62_1327.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 44px;
+  left: 224px;
+  overflow: hidden;
 }
-
-.edge-professional {
-    margin-left: 4vw;
-    margin-right: 4vw;
-    display: block;
+.v62_1419 {
+  width: 100%;
+  height: 429px;
+  background: url("../images/v62_1419.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 2318px;
+  left: 1px;
+  overflow: hidden;
 }
-
-.edge-professional img {
-    width: 100%;
-    max-width: 1095px;
-    text-align: left;
-    margin-top: 4vw;
-    margin-bottom: 4vw;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+.v62_1344 {
+  width: 767px;
+  color: url("../images/v62_1344.png");
+  position: absolute;
+  top: 2425px;
+  left: 222px;
+  font-size: 48px;
+  opacity: 1;
+  text-align: left;
 }
-
-.article {
-    margin-left: 4vw;
-    margin-right: 4vw;
-    margin-top: 5vw;
+.v62_1347 {
+  width: 294px;
+  color: rgba(25,34,88,1);
+  position: absolute;
+  top: 2156px;
+  left: 104px;
+  font-family: Kanit;
+  font-weight: Regular;
+  font-size: 28px;
+  opacity: 1;
+  text-align: center;
 }
-
-.article img {
-    max-width: 1095px;
-    width: 100%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+.v62_1348 {
+  width: 277px;
+  color: rgba(25,34,88,1);
+  position: absolute;
+  top: 2156px;
+  left: 461px;
+  font-family: Kanit;
+  font-weight: Regular;
+  font-size: 28px;
+  opacity: 1;
+  text-align: center;
 }
-
-.platform {
-    margin-left: 3vw;
-    margin-right: 3vw;
-    margin-top: 5vw;
-    height: 100%;
+.v62_1349 {
+  width: 264px;
+  color: rgba(25,34,88,1);
+  position: absolute;
+  top: 2156px;
+  left: 804px;
+  font-family: Kanit;
+  font-weight: Regular;
+  font-size: 28px;
+  opacity: 1;
+  text-align: center;
 }
-
-.platform img {
-    margin-top: 8vh;
-    margin-bottom: 8vh;
-    max-width: 920px;
-    width: 100%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+.v62_1350 {
+  width: 237px;
+  color: rgba(25,34,88,1);
+  position: absolute;
+  top: 2156px;
+  left: 1162px;
+  font-family: Kanit;
+  font-weight: Regular;
+  font-size: 28px;
+  opacity: 1;
+  text-align: center;
 }
-
-.platform h1 {
-    text-align: center;
-    font-size: 3.3vmin;
-    font-weight: normal;
+.name {
+  color: #fff;
 }
-
-.platform-info {
-    margin-top: 1.3vw;
-    margin-bottom: 2vw;
-    color: #253470;
+.name {
+  color: #fff;
 }
-
-.platform p {
-    text-align: center;
-    font-size: min(1.8vmin, 36px);
-    font-weight: lighter;
+.name {
+  color: #fff;
 }
-
-.orange {
-    color: #F15A38;
+.v62_1354 {
+  width: 483px;
+  color: rgba(19,38,129,1);
+  position: absolute;
+  top: 2882px;
+  left: 222px;
+  font-family: Kanit;
+  font-weight: Regular;
+  font-size: 36px;
+  opacity: 1;
+  text-align: left;
 }
-
-.violet {
-    color: #142782;
+.v62_1355 {
+  width: 479px;
+  color: rgba(129,130,132,1);
+  position: absolute;
+  top: 3022px;
+  left: 222px;
+  font-family: Kanit;
+  font-weight: Light;
+  font-size: 18px;
+  opacity: 1;
+  text-align: left;
 }
-
-.platform-btn {
-    text-align: center;
-    width: 100%;
-    max-width: 500px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+.v62_1359 {
+  width: 487px;
+  color: rgba(19,38,129,1);
+  position: absolute;
+  top: 3776px;
+  left: 892px;
+  font-family: Kanit;
+  font-weight: Regular;
+  font-size: 36px;
+  opacity: 1;
+  text-align: left;
 }
-
-.platform-btn img {
-    width: 18vw;
-    max-width: 200px;
-    margin-left: 0.8vw;
-    margin-right: 0.8vw;
+.v62_1360 {
+  width: 320px;
+  height: 270px;
+  background: url("../images/v62_1360.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 1875px;
+  left: 90px;
+  overflow: hidden;
 }
-
-.platform-info-2 p {
-    text-align: center;
-    font-size: min(1.8vmin,18px);
-    font-weight: lighter;
-    margin-top: 2vw;
-    margin-bottom: 4vw;
+.v62_1361 {
+  width: 320px;
+  height: 270px;
+  background: url("../images/v62_1361.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 1875px;
+  left: 430px;
+  overflow: hidden;
 }
-
-footer {
-    background: #121a40;
+.v62_1362 {
+  width: 320px;
+  height: 270px;
+  background: url("../images/v62_1362.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 1875px;
+  left: 776px;
+  overflow: hidden;
 }
-
-#footer_container {
-    max-width: 1216px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    display: flex;
+.v62_1363 {
+  width: 648px;
+  color: rgba(19,38,129,1);
+  position: absolute;
+  top: 2580px;
+  left: 222px;
+  font-family: Kanit;
+  font-weight: Light;
+  font-size: 18px;
+  opacity: 1;
+  text-align: left;
 }
-
-#footer1 {
-    margin-left: 1vw;
-    margin-top: 3vw;
-    margin-bottom: 3vw;
+.v62_1364 {
+  width: 341px;
+  height: 287px;
+  background: url("../images/v62_1364.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 1852px;
+  left: 1117px;
+  overflow: hidden;
 }
-
-#footer_tab img {
-    width: 8vw;
-    max-width: 46px;
+.v62_1369 {
+  width: 66px;
+  height: 22px;
+  background: url("../images/v62_1369.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 1139px;
+  left: 892px;
+  overflow: hidden;
 }
-
-#achieve_tomorrow h1 {
-    color: white;
-    font-size: min(3.3vmin, 36px);
-    font-weight: normal;
+.v62_1377 {
+  width: 90px;
+  height: 30px;
+  background: url("../images/v62_1377.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 358px;
+  left: 222px;
+  overflow: hidden;
 }
-
-#today h1 {
-    color: #EFC2AF;
-    font-size: min(3.3vmin, 36px);
-    font-weight: normal;
+.v62_1378 {
+  width: 100px;
+  height: 100px;
+  background: url("../images/v62_1378.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 5559px;
+  left: 1474px;
+  overflow: hidden;
 }
-
-#edge_logo {
-    margin-top: 4vw;
+.v62_1380 {
+  width: 54px;
+  height: 18px;
+  background: url("../images/v62_1380.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 2840px;
+  left: 222px;
+  overflow: hidden;
 }
-
-#edge_logo img {
-    width: 10vw;
-    max-width: 136px;
+.v62_1381 {
+  width: 54px;
+  height: 18px;
+  background: url("../images/v62_1381.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 3230px;
+  left: 222px;
+  overflow: hidden;
 }
-
-#edge_logo p {
-    color: #F5F5F7;
-    margin-top: 0.5vw;
-    font-size: min(1.5vmin, 16px);
+.v62_1382 {
+  width: 54px;
+  height: 18px;
+  background: url("../images/v62_1382.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 3746px;
+  left: 892px;
+  overflow: hidden;
 }
-
-#footer2 {
-    margin-left: auto;
-    margin-right: 0px;
-    margin-top: 5rem;
-    margin-bottom: 3vw;
-    display: flex;
+.v88_1626 {
+  width: 535px;
+  height: 472px;
+  background: url("../images/v88_1626.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 3637px;
+  left: 221px;
+  overflow: hidden;
 }
-
-#footer2_1 h1 {
-    color: #BBBDCD;
-    font-size: min(2vmin, 24px);
-    font-style: regular;
+.name {
+  color: #fff;
 }
-
-#follow_us img {
-    max-width: 40px;
-    width: 4vw;
-    margin-top: 0.5vw;
-    margin-bottom: 0.5vw;
+.v72_1649 {
+  width: 502px;
+  height: 705px;
+  background: url("../images/v72_1649.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 967px;
+  left: 248px;
+  overflow: hidden;
 }
-
-#download_qr_store {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0.5vw;
-    margin-bottom: 0px;
-    display: flex;
+.name {
+  color: #fff;
 }
-
-#qr_download img{
-    width: 8vw;
-    max-width: 82px;
-    display: block;
+.name {
+  color: #fff;
 }
-
-#btn_download {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-left: 1vw;
-    height: 8vw;
-    max-height: 82px;
+.name {
+  color: #fff;
 }
-
-#btn_download_apple {
-    margin-top: 0px;
+.v88_1625 {
+  width: 535px;
+  height: 473px;
+  background: url("../images/v88_1625.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  opacity: 1;
+  position: absolute;
+  top: 2948px;
+  left: 781px;
+  overflow: hidden;
 }
-
-#btn_download_android {
-    margin-bottom: 0px;
-}
-
-#btn_download_apple img {
-    width: 10vw;
-    max-width: 99px;
-    display: block;
-}
-
-#btn_download_android img {
-    width: 10vw;
-    max-width: 99px;
-    display: block;
-}
-
-#footer2_2 {
-    margin-left: 5vw;
-}
-
-#footer2_2 H1 {
-    color: #BBBDCD;
-    font-size: min(2vmin, 24px);
-    font-style: regular;
-}
-
-#footer2_2 p {
-    color:#F5F5F7;
-    font-size: min(1.6vmin, 18px);
-    margin-top: 1vw;
-    margin-bottom: 1vw;
-}
-
-#address {
-    margin-top: 1.2vw;
-}
-
-.footer-bar img {
-    display: block;
-    align-self: left;
-    width: 65vw;
+.name {
+  color: #fff;
 }
