--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ header {
     align-self: center;
 }
 
-.open-account-image img{
+#open-account-image img{
     max-width: 502px;
     width: 40vw;
     margin-top: 0px;
@@ -78,7 +78,7 @@ header {
     max-width: 66px;
 }
 
-.start-edge-btn {
+#start-edge-btn {
     text-align: center;
     width: 100%;
     margin-top: 2vw;
@@ -88,20 +88,20 @@ header {
     text-align: left;
 }
 
-.start-edge-btn img {
+#start-edge-btn img {
     width: 18vw;
     max-width: 200px;
     margin-right: 1.2vw;
 }
 
-.start-edge-info {
+#start-edge-info {
     text-align: left;
     font-size: min(1.8vmin, 18px);
     font-weight: lighter;
     margin-top: 2vw;
 }
 
-.why-edge {
+#why-edge {
     margin-left: 2vw;
     margin-right: 2vw;
     margin-top: 5vw;
@@ -110,7 +110,7 @@ header {
     /* border: 1px solid red; */
 }
 
-.why-edge img {
+#why-edge img {
     max-width: 1317px;
     width: 100%;
     height: auto;
@@ -127,13 +127,13 @@ header {
     background-size: contain;
 }
 
-.edge-professional {
+#edge-professional {
     margin-left: 4vw;
     margin-right: 4vw;
     display: block;
 }
 
-.edge-professional img {
+#edge-professional img {
     width: 100%;
     max-width: 1095px;
     text-align: left;
@@ -159,14 +159,14 @@ header {
     display: block;
 }
 
-.platform {
+#platform {
     margin-left: 3vw;
     margin-right: 3vw;
     margin-top: 5vw;
     height: 100%;
 }
 
-.platform img {
+#platform img {
     margin-top: 8vh;
     margin-bottom: 8vh;
     max-width: 920px;
@@ -177,23 +177,24 @@ header {
     display: block;
 }
 
-.platform h1 {
+#platform h1 {
     text-align: center;
     font-size: 3.3vmin;
     font-weight: normal;
 }
 
-.platform-info {
+#platform p {
+    text-align: center;
+    font-size: min(1.8vmin, 36px);
+    font-weight: lighter;
+}
+
+#platform-info {
     margin-top: 1.3vw;
     margin-bottom: 2vw;
     color: #253470;
 }
 
-.platform p {
-    text-align: center;
-    font-size: min(1.8vmin, 36px);
-    font-weight: lighter;
-}
 
 .orange {
     color: #F15A38;
@@ -203,7 +204,7 @@ header {
     color: #142782;
 }
 
-.platform-btn {
+#platform-btn {
     text-align: center;
     width: 100%;
     max-width: 500px;
@@ -212,14 +213,14 @@ header {
     display: block;
 }
 
-.platform-btn img {
+#platform-btn img {
     width: 18vw;
     max-width: 200px;
     margin-left: 0.8vw;
     margin-right: 0.8vw;
 }
 
-.platform-info-2 p {
+#platform-info-2 p {
     text-align: center;
     font-size: min(1.8vmin,18px);
     font-weight: lighter;
@@ -295,14 +296,15 @@ footer {
 #follow_us img {
     max-width: 40px;
     width: 4vw;
-    margin-top: 0.5vw;
-    margin-bottom: 0.5vw;
+    margin-top: 1vw;
+    margin-bottom: 2vw;
+    margin-right: 0.5vw;
 }
 
 #download_qr_store {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0.5vw;
+    margin-top: 1vw;
     margin-bottom: 0px;
     display: flex;
 }
@@ -364,7 +366,7 @@ footer {
 }
 
 #address {
-    margin-top: 1.2vw;
+    margin-top: 2vw;
 }
 
 .footer-bar img {
